[gd_scene load_steps=31 format=2]

[ext_resource path="res://Enemies/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemies/BoneSprites.png" type="Texture" id=2]
[ext_resource path="res://Enemies/BoneBoss.gd" type="Script" id=3]
[ext_resource path="res://Effects/FlickerLight.tscn" type="PackedScene" id=4]
[ext_resource path="res://Controllers/CollisionBoxes/HitBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Controllers/CollisionBoxes/ReflectBox.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/BossHealthMeter.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/Boss1HpPortrait.png" type="Texture" id=8]
[ext_resource path="res://Enemies/BoneSpritesLight.png" type="Texture" id=9]
[ext_resource path="res://Effects/Sprites/LightGlareTexture.png" type="Texture" id=10]
[ext_resource path="res://Effects/Explosion.tscn" type="PackedScene" id=11]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec4 flash_color: hint_color = vec4(1.0);
uniform float flash_modifier: hint_range(0.0, 1.0) = 1.0;

void fragment() {
	vec4 color = texture(TEXTURE, UV);
	color.rgb = mix(color.rgb, flash_color.rgb, flash_modifier);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 3 )

[sub_resource type="CanvasItemMaterial" id=4]
light_mode = 1

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 6, 20 )

[sub_resource type="Animation" id=6]
length = 0.1
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 5 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.001 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "createGhostEffect"
}, {
"args": [  ],
"method": "createDustEffect"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LightSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 4, 5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/FlickerLight:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 22, 2 ) ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 10, 11 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "idle"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LightSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 10, 11 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/FlickerLight:position")
tracks/3/interp = 0
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 8, -9 ), Vector2( 9, -8 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "executeDashAttack"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LightSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 2, 3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/FlickerLight:position")
tracks/3/interp = 0
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 8, -9 ), Vector2( 9, -6 ) ]
}

[sub_resource type="Animation" id=9]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 15 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LightSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 15 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/FlickerLight:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, -1 ) ]
}

[sub_resource type="Animation" id=10]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LightSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/FlickerLight:position")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, -15 ), Vector2( 1, -14 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LightSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 9 ]
}

[sub_resource type="Animation" id=12]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "createGhostEffect"
}, {
"args": [  ],
"method": "createGhostEffect"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LightSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 6 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/FlickerLight:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 12, -12 ) ]
}

[sub_resource type="Animation" id=13]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 7, 8 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "jumpAttackDone"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LightSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 7, 8 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/FlickerLight:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, -11 ) ]
}

[sub_resource type="Animation" id=14]
length = 0.15
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.001, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "createGhostEffect"
}, {
"args": [  ],
"method": "createDustEffect"
}, {
"args": [  ],
"method": "createDustEffect"
}, {
"args": [  ],
"method": "createDustEffect"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LightSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 12, 13, 14 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/FlickerLight:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, -14 ) ]
}

[sub_resource type="Animation" id=15]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 10, 11 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "executeSpinAttack"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LightSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 10, 11 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/FlickerLight:position")
tracks/3/interp = 0
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 8, -9 ), Vector2( 9, -8 ) ]
}

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 40, 10 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 10, 21 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 6, 20 )

[sub_resource type="CapsuleShape2D" id=19]
height = 56.0

[node name="BoneBoss" instance=ExtResource( 1 )]
z_index = 1
script = ExtResource( 3 )
sizeScale = 1.5
SmokeExplode = ExtResource( 11 )

[node name="Sprite" parent="." index="0"]
material = SubResource( 2 )
position = Vector2( 0, -24 )
texture = ExtResource( 2 )
hframes = 16
frame = 11

[node name="FlickerLight" parent="Sprite" index="0" instance=ExtResource( 4 )]
position = Vector2( 9, -8 )
texture = ExtResource( 10 )
texture_scale = 1.0
color = Color( 0.65098, 0.388235, 1, 1 )
energy = 1.5
amplitude = 0.005

[node name="Center" parent="Sprite" index="1"]
visible = false

[node name="WallCast" type="RayCast2D" parent="Sprite" index="2"]
visible = false
enabled = true
cast_to = Vector2( 8, 0 )
collision_mask = 2

[node name="HitBoxDashAttack" parent="Sprite" index="3" instance=ExtResource( 5 )]
visible = false
collision_mask = 4
damage = 10

[node name="CollisionShape2D" parent="Sprite/HitBoxDashAttack" index="0"]
position = Vector2( 13, 10 )
shape = SubResource( 3 )
disabled = true

[node name="LightSprite" type="Sprite" parent="." index="1"]
material = SubResource( 4 )
position = Vector2( 0, -24 )
texture = ExtResource( 9 )
hframes = 16
frame = 11

[node name="CollisionShape2D" parent="." index="2"]
visible = false
position = Vector2( 0, -20 )
shape = SubResource( 5 )

[node name="AnimationPlayer" parent="." index="3"]
autoplay = "Idle"
anims/DashAttack = SubResource( 6 )
anims/DashAttackDone = SubResource( 7 )
anims/DashAttackPrep = SubResource( 8 )
anims/Defeated = SubResource( 9 )
anims/Idle = SubResource( 10 )
anims/JumpAttackDone = SubResource( 11 )
anims/JumpAttackPrep = SubResource( 12 )
anims/JumpAttackThrow = SubResource( 13 )
anims/SpinAttack = SubResource( 14 )
anims/SpinAttackPrep = SubResource( 15 )

[node name="ReflectBox" parent="." index="4" instance=ExtResource( 6 )]
visible = false
position = Vector2( 0, -24 )
speedMultiplier = 1.5
damageMultiplier = 5.0
modulateColor = Color( 0.494118, 0.113725, 1, 1 )

[node name="CollisionShape2D" parent="ReflectBox" index="0"]
visible = false
position = Vector2( 0, -1 )
shape = SubResource( 16 )
disabled = true

[node name="HurtBox" parent="." index="5"]
visible = false

[node name="CollisionShape2D" parent="HurtBox" index="0"]
visible = false
position = Vector2( 0, -21 )
shape = SubResource( 17 )

[node name="EnemyStats" parent="." index="6"]
maxHealth = 36

[node name="BossHealthMeter" parent="EnemyStats" index="0" instance=ExtResource( 7 )]

[node name="BossHealthMeter" parent="EnemyStats/BossHealthMeter" index="0"]
visible = false

[node name="HPPortrait" parent="EnemyStats/BossHealthMeter/BossHealthMeter" index="3"]
texture = ExtResource( 8 )

[node name="HitBox" parent="." index="7"]
visible = false
damage = 5

[node name="CollisionShape2D" parent="HitBox" index="0"]
visible = false
position = Vector2( 0, -20 )
shape = SubResource( 18 )

[node name="HitBoxSpin" parent="." index="8" instance=ExtResource( 5 )]
visible = false
collision_mask = 4
damage = 10

[node name="CollisionShape2D" parent="HitBoxSpin" index="0"]
visible = false
position = Vector2( 0, -24 )
rotation = 1.5708
shape = SubResource( 19 )
disabled = true

[node name="AttackTimer" type="Timer" parent="." index="10"]
wait_time = 0.5
one_shot = true

[node name="JumpAttackTimer" type="Timer" parent="." index="11"]
wait_time = 0.809
one_shot = true

[node name="SpinAttackTimer" type="Timer" parent="." index="12"]
wait_time = 3.0
one_shot = true

[node name="InitTimer" type="Timer" parent="." index="13"]
wait_time = 0.1

[connection signal="timeout" from="AttackTimer" to="." method="chooseAttack"]
[connection signal="timeout" from="JumpAttackTimer" to="." method="executeJumpAttack"]
[connection signal="timeout" from="SpinAttackTimer" to="." method="_on_SpinAttackTimer_timeout"]
[connection signal="timeout" from="InitTimer" to="." method="_on_InitTimer_timeout"]

[editable path="Sprite/HitBoxDashAttack"]
[editable path="ReflectBox"]
[editable path="HurtBox"]
[editable path="EnemyStats/BossHealthMeter"]
[editable path="HitBox"]
[editable path="HitBoxSpin"]
